CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(graphics C)

OPTION(GRAPHICS_EXTERNAL_BUILD "GRAPHICS_EXTERNAL_BUILD" OFF)
OPTION(GRAPHICS_INSTALL "GRAPHICS_INSTALL" OFF)
OPTION(GRAPHICS_BUILD_TEST "GRAPHICS_BUILD_TEST" OFF)

MESSAGE("GRAPHICS_EXTERNAL_BUILD: ${GRAPHICS_EXTERNAL_BUILD}")
MESSAGE("GRAPHICS_INSTALL: ${GRAPHICS_INSTALL}")
MESSAGE("GRAPHICS_BUILD_TEST: ${GRAPHICS_BUILD_TEST}")

IF(NOT GRAPHICS_EXTERNAL_BUILD)
    if(${CMAKE_C_COMPILER_ID} STREQUAL Clang)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
    elseif(${CMAKE_C_COMPILER_ID} STREQUAL AppleClang)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
    elseif(${CMAKE_C_COMPILER_ID} STREQUAL GNU)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
    elseif(${CMAKE_C_COMPILER_ID} STREQUAL Intel)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
    elseif(${CMAKE_C_COMPILER_ID} STREQUAL MSVC)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Wall /WX")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd5045")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4668")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4710")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4738")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4820")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4711")
    endif()
    
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_GENERATOR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR})
ENDIF()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

SET(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(GRAPHICS_SOURCES
    ${SOURCE_DIR}/graphics.c
    ${SOURCE_DIR}/struct.h
    ${SOURCE_DIR}/detail.h
    ${SOURCE_DIR}/detail.c
)

set(GRAPHICS_HEADERS
    ${INCLUDE_DIR}/graphics/config.h
    ${INCLUDE_DIR}/graphics/graphics.h
)

include_directories(${PROJECT_NAME} ${INCLUDE_DIR})

add_library(${PROJECT_NAME} STATIC ${GRAPHICS_SOURCES} ${GRAPHICS_HEADERS})

if(GRAPHICS_INSTALL)
    install(DIRECTORY include
        DESTINATION .
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

    install(TARGETS ${PROJECT_NAME}
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
endif()

if(GRAPHICS_BUILD_TEST)

endif()